--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,11 +27,17 @@ dist.dir=dist
 dist.jar=${dist.dir}/CollegeAPP.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jcalendar-1.4.jar=jcalendar-1.4.jar
 file.reference.mysql-connector-java-5.1.45-bin.jar=mysql-connector-java-5.1.45-bin.jar
+file.reference.rs2xml.jar=rs2xml.jar
+file.reference.swingx-all-1.6.4.jar=C:\\Program Files\\NetBeans 8.2\\ide\\modules\\ext\\swingx-all-1.6.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.45-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.45-bin.jar}:\
+    ${file.reference.rs2xml.jar}:\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.swingx-all-1.6.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
