--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,7 +37,8 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.45-bin.jar}:\
     ${file.reference.rs2xml.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.swingx-all-1.6.4.jar}
+    ${file.reference.swingx-all-1.6.4.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
